5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1712_2508.log
== TEST (2019-05-13 14:56:48) 
-- CODE:
n = int(input("numero de termos: "))  #quantidade de termos

p = 3
d1 = 0 
d2 = 1
d3 = 2
s = 1
c = 0

while c < n:
	p = p + (s*(4/(d1*d2*d3)))
	if s == 1:
		s = -1
	else:
		s = 1
	c = c + 1
	d1 = d1 + 2
	d2 = d2 + 2
	d3 = d3 + 2
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    p = p + (s*(4/(d1*d2*d3)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:58:42) 
-- CODE:
n = int(input("numero de termos: "))  #quantidade de termos

p = 3
d1 = 2 
d2 = 3
d3 = 5
s = 1
c = 0

if n = 1:
	print(p)
else:
	while c < n:
		p = p + (s*(4/(d1*d2*d3)))
		if s == 1:
			s = -1
		else:
			s = 1
		c = c + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(p)
-- ERROR:
File "XXXX", line 10
    if n = 1:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:58:47) 
-- CODE:
n = int(input("numero de termos: "))  #quantidade de termos

p = 3
d1 = 2 
d2 = 3
d3 = 5
s = 1
c = 0

if n == 1:
	print(p)
else:
	while c < n:
		p = p + (s*(4/(d1*d2*d3)))
		if s == 1:
			s = -1
		else:
			s = 1
		c = c + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(p)
-- OUTPUT:
3.113090613090613
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:58:54) 
-- CODE:
n = int(input("numero de termos: "))  #quantidade de termos

p = 3
d1 = 2 
d2 = 3
d3 = 5
s = 1
c = 0

if n == 1:
	print(p)
else:
	while c < n:
		p = p + (s*(4/(d1*d2*d3)))
		if s == 1:
			s = -1
		else:
			s = 1
		c = c + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(p)
-- OUTPUT:
3.113090613090613
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:59:15) 
-- CODE:
n = int(input("numero de termos: "))  #quantidade de termos

p = 3
d1 = 2 
d2 = 3
d3 = 4
s = 1
c = 0

if n == 1:
	print(p)
else:
	while c < n:
		p = p + (s*(4/(d1*d2*d3)))
		if s == 1:
			s = -1
		else:
			s = 1
		c = c + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(p)
-- OUTPUT:
3.1427128427128426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:59:35) 
-- CODE:
n = int(input("numero de termos: "))  #quantidade de termos

p = 3
d1 = 2 
d2 = 3
d3 = 4
s = 1
c = 0

if n == 1:
	print(p)
else:
	while c < (n - 1):
		p = p + (s*(4/(d1*d2*d3)))
		if s == 1:
			s = -1
		else:
			s = 1
		c = c + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(p)
-- OUTPUT:
3.1396825396825396
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:59:58) 
-- CODE:
n = int(input("numero de termos: "))  #quantidade de termos

p = 3
d1 = 2 
d2 = 3
d3 = 4
s = 1
c = 0

if n == 1:
	print(p)
else:
	while c < (n - 1):
		p = p + (s*(4/(d1*d2*d3)))
		if s == 1:
			s = -1
		else:
			s = 1
		c = c + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(p)
-- OUTPUT:
3.1396825396825396
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:00:02) 
-- CODE:
n = int(input("numero de termos: "))  #quantidade de termos

p = 3
d1 = 2 
d2 = 3
d3 = 4
s = 1
c = 0

if n == 1:
	print(p)
else:
	while c < (n - 1):
		p = p + (s*(4/(d1*d2*d3)))
		if s == 1:
			s = -1
		else:
			s = 1
		c = c + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(p)
-- OUTPUT:
3.1396825396825396
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:00:24) 
-- CODE:
n = int(input("numero de termos: "))  #quantidade de termos

p = 3
d1 = 2 
d2 = 3
d3 = 4
s = 1
c = 0

if n == 1:
	print(p)
else:
	while c < (n - 1):
		p = p + (s*(4/(d1*d2*d3)))
		if s == 1:
			s = -1
		else:
			s = 1
		c = c + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(round(p, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:00:30) 
-- CODE:
n = int(input("numero de termos: "))  #quantidade de termos

p = 3
d1 = 2 
d2 = 3
d3 = 4
s = 1
c = 0

if n == 1:
	print(p)
else:
	while c < (n - 1):
		p = p + (s*(4/(d1*d2*d3)))
		if s == 1:
			s = -1
		else:
			s = 1
		c = c + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(round(p, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:00:36) 
-- CODE:
n = int(input("numero de termos: "))  #quantidade de termos

p = 3
d1 = 2 
d2 = 3
d3 = 4
s = 1
c = 0

if n == 1:
	print(p)
else:
	while c < (n - 1):
		p = p + (s*(4/(d1*d2*d3)))
		if s == 1:
			s = -1
		else:
			s = 1
		c = c + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(round(p, 8))
-- EXECUTION TIME:
0.132544
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
